=========

Version 1.5.0

  * fix local url with href anchor
  * M2R convertor support for another MarkDown parsing way
  * check_version command for version check in all files
    in repository
  * bad parser in config fix
  * desktop icon fix
  * period check/save fix
  * quit dialog fix
  * dialogs use `Document` word
  * tab width fix
  * search error fix (issue #7)
  * searching refactoring

Version 1.4.3

  * cz.zeropage.Formiko application ID fix

Version 1.4.2

  * save_as window fix
  * AppStream metadata

Version 1.4.0

  * man pages
  * words and characters count live info
  * Recommonmark (MarkDown) support with colored code
  * change preview - set paned position fix
  * GTK Warning fix (debian bug #933622)
  * SearchBar and searching text in editor
  * searching text in preview
  * creating backup file before write changes to new one
  * refresh preview action / button
  * opening links in system from preview, known file types open in new formiko
    window
  * preview auto scroll
  * fixing positing in preview only mode
  * preview/editor/both with shortcuts and store in cache
  * edited file change time check

Version 1.3.0

  * spell check support
  * display white chars switch
  * highlighting current line switch
  * printing document output
  * shortcuts dialog

Version 1.2.1

  * fix SIGSEGV - gui threads conflict
  * fix window cache settings
  * min size of editor and preview when both widgets are visible
  * python2 fix

Version 1.2.0

  * vim with working application menu
  * realy disabled accels for vim
  * toggle buttons to on/off editor and preview
  * tabs setting in status bar
  * preferences are save automatical
  * auto indent is switchable
  * showing line numbers is switchable
  * right margin is switchable
  * text wrapping is switchable

Version 1.1.0

  * GTK Version check
  * add accels only for SourceView editor
  * export document as HTML
  * using WebKit2 engine
  * Python 2.x encoding fixies